--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       content="Web site created using create-react-app"
     />
     <title>Travel Jornal</title>
+    <link rel="icon" type="image/png" href="http://example.com/myicon.png" />
   </head>
   <body>
     <div id="root"></div>
